fix z-Index

--- a/src/components/Humburger/humburger.module.scss
+++ b/src/components/Humburger/humburger.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   height: 100vh;
   width: 500px;
-  z-index: 1000;
+  z-index: 997;
   @media screen and (max-width: 600px) {
     width: 100%;
   }
@@ -18,7 +18,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  z-index: 996;
 }
 .None {
   display: none;
@@ -31,7 +31,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(8px); /* Добавляем эффект размытия */
-  z-index: 999;
+  z-index: 996;
 }
 
 .background {
@@ -46,7 +46,7 @@
 }
 
 .button {
-  z-index: 1001;
+  z-index: 998;
   outline: none;
   cursor: pointer;
   position: fixed;
